--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -35,11 +35,13 @@ header {
     align-items: center;
     border-bottom: 1px solid var(--white);
     box-shadow: 1px 1px 10px var(--white);
+    flex-wrap: wrap;
 }
 
 header h1 {
     font-weight: var(--font-bold);
     font-size: 2rem;
+    width: 23rem;
 }
 
 .header-logo {
@@ -52,6 +54,26 @@ header h1 {
     border-radius: 100%;
     box-shadow: -2px 1px 2px var(--white);
     margin-right: 1rem;
+}
+
+header button {
+    margin-left: 1rem;
+    background: var(--red);
+    color: var(--white);
+    width: 8rem;
+    height: 3rem;
+    border-radius: 1rem;
+    font-family: var(--font-family);
+    font-weight: var(--font-medium);
+    border: 1px solid var(--white);
+    cursor: pointer;
+    transition: 0.5s;
+}
+
+header button:hover {
+    background-color: var(--dark-grey);
+    box-shadow: 0px 0px 5px var(--white);
+
 }
 
 main {
@@ -81,7 +103,8 @@ main {
     width: 30rem;
     height: 19rem;
     border-radius: 1rem;
-    box-shadow: -2px 3px 8px var(--black)
+    box-shadow: -2px 3px 8px var(--black);
+    cursor: pointer;
 }
 
 .main-title-video {
